--- a/app/src/main/res/layout/pic_view.xml
+++ b/app/src/main/res/layout/pic_view.xml
@@ -15,11 +15,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/bus_route" />
     </androidx.viewpager.widget.ViewPager>
+
+    <com.lwj.widget.viewpagerindicator.ViewPagerIndicator
+        android:id="@+id/viePwagerIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@android:color/transparent"
+        app:default_color="#579C27B0"
+        app:distance="500dp"
+        app:distanceType="BY_RADIUS"
+        app:indicatorType="CIRCLE_LINE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:length="12dp"
+        app:radius="5dp"
+        app:selected_color="#579C27B0" />
+<!--    <android.support.design.widget.TabLayout-->
+<!--        android:id="@+id/tabDots"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:tabBackground="@drawable/tab_selector"-->
+<!--        app:tabGravity="center"-->
+<!--        app:tabIndicatorHeight="0dp"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
